--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <nav class="navbar navbar-expand-sm navbar-dark" id="navbar-custom">
         <span class="navbar-brand m-8 h1">
-            <img src="assets/crystal.png" width="60" height="60" class="d-inline-block align-center mr-2" alt="">Shayla Stevenson
+            <img src="assets/crystal.png" class="d-inline-block align-center mr-2 mb-2" alt="">Shayla Stevenson
         </span>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
