cleaned up CSS and comments

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </nav>
 
     <!--Greeting Box with Image-->   
-    <section class="container-sm m-2 p-2 custom-top-container">
+    <section class="container-sm p-2 m-2 custom-top-container">
         <div class="row">
-            <div class="col-sm-8 my-2">
-                <h1 class="display-1"><span id="custom-greeting">Hello</span><br>I'm glad you stopped by</h1>
+            <div class="col-sm-8">
+                <h1 class="display-1 greeting-text-box p-2 m-1"><span id="custom-greeting">Hello</span><br>I'm glad you stopped by</h1>
             </div>
 
-            <div class="col-sm-4 my-2">
+            <div class="col-sm-4">
                 <img src="assets/myphoto.jpg" class="img-thumbnail img-fluid mx-auto d-block p-1" alt="Photo of Shayla">
             </div>
         </div>
