refined contact box margins

--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,12 @@
     
     <section class="container-sm">
         <div class="row">
+            <div class="col-sm-5 ">
+                <h1 class="display-1 p-2 m-2" id="contact-greeting" >It would be great to hear from you</h1>
+            </div>
+
             <div class="col-sm-7 mt-2 p-2" id="contact-box">
                 <p>jkfvkdjfk</p>
-            </div>
-    
-            <div class="col-sm-5 mt-2 p-2">
-                <h1 class="display-1" id="contact-greeting">It would be great to hear from you</h1>
             </div>
         </div>
 
