--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!--Navigation Brand-->
-    <nav class="navbar navbar-expand-sm navbar-dark" id="navbar-custom">
-        <span class="navbar-brand h1">
-            <img src="assets/crystal.png" class="d-inline-block align-center mb-2 mr-2" alt="">Shayla Stevenson
+    <nav class="navbar navbar-expand-sm navbar-dark py-0" id="navbar-custom">
+        <span class="navbar-brand h1 mb-0 p-0">
+            <img src="assets/crystal.png" class="d-inline-block align-center mb-4 mr-2" alt="">Shayla Stevenson
         </span>
 
     <!--Hamburger Icon-->
@@ -22,7 +22,7 @@
         </button>
 
     <!--Navigation Links-->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end py-0" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
@@ -38,20 +38,20 @@
     </nav>
 
     <!--Greeting Box with Image-->   
-    <section class="container-sm p-2 m-2 custom-top-container">
+    <section class="container-sm custom-top-container p-2 mt-2">
         <div class="row">
             <div class="col-sm-8">
                 <h1 class="display-1 greeting-text-box p-2 m-1"><span id="custom-greeting">Hello</span><br>I'm glad you stopped by</h1>
             </div>
 
             <div class="col-sm-4">
-                <img src="assets/myphoto.jpg" class="img-thumbnail img-fluid mx-auto d-block p-1" alt="Photo of Shayla">
+                <img src="assets/myphoto.jpg" class="img-thumbnail img-fluid mx-auto d-block p-1" id="profile-img" alt="Photo of Shayla">
             </div>
         </div>
     </section>
 
     <!--Content Box with Paragraphs-->
-    <main class="container-sm m-2 p-2 custom-content-container">
+    <main class="container-sm custom-content-container p-3 mt-2">
         <div class="row">
             <div class="col-sm custom-content-head">
                 <h2>About Me</h2>
