--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="stylesheet.css">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/c3c011729d.js" crossorigin="anonymous"></script>
     <title>Shayla Stevenson</title>
 </head>
 <body>
     <!--Navigation Brand-->
-    <nav class="navbar navbar-expand-sm navbar-dark py-0" id="navbar-custom">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top py-0" id="navbar-custom">
         <span class="navbar-brand h1 mb-0 p-0">
-            <img src="assets/crystal.png" class="d-inline-block align-center mb-4 mr-2" alt="">Shayla Stevenson
+            <img src="assets/crystal.png" class="img-fluid mx-auto d-block-inline mb-3 mr-2" alt="crystal-icon">Shayla Stevenson
         </span>
 
     <!--Hamburger Icon-->
@@ -38,7 +39,7 @@
     </nav>
 
     <!--Greeting Box with Image-->   
-    <section class="container-sm custom-top-container p-2 mt-2">
+    <header class="container-sm custom-top-container p-2 mt-2">
         <div class="row">
             <div class="col-sm-8">
                 <h1 class="display-1 greeting-text-box p-2 m-1"><span id="custom-greeting">Hello</span><br>I'm glad you stopped by</h1>
@@ -48,7 +49,7 @@
                 <img src="assets/myphoto.jpg" class="img-thumbnail img-fluid mx-auto d-block p-1" id="profile-img" alt="Photo of Shayla">
             </div>
         </div>
-    </section>
+    </header>
 
     <!--Content Box with Paragraphs-->
     <main class="container-sm custom-content-container p-3 mt-2">
@@ -77,8 +78,32 @@
                 </p>
             </div>
         </div>
-
     </main>
+
+    <!--Footer-->
+    <footer class="container-fluid-sm custom-footer fixed-bottom p-1">
+        <div class="row">
+            <div class="col-4">
+                <a href="https://www.facebook.com/shayla.stevenson.165" target="_blank">
+                    <i class="fab fa-facebook" alt="Facebook Icon"></i>
+                </a>
+            </div>
+
+            <div class="col-4">
+                <a href="https://www.instagram.com/shayla711/" target="_blank">
+                    <i class="fab fa-instagram" alt="Instagram Icon"></i>
+                </a>
+            </div>
+
+            <div class="col-4">
+                <a href="https://github.com/ShaylaStevenson" target="_blank">
+                    <i class="fab fa-github" alt="Github Icon"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+
+    
     
 
 
