--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="stylesheet.css">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/c3c011729d.js" crossorigin="anonymous"></script>
     <title>Shayla Stevenson</title>
 </head>
 <body>
-    <!-- Navigation Brand-->
-    <nav class="navbar navbar-expand-sm navbar-dark" id="navbar-custom">
-        <span class="navbar-brand h1">
-            <img src="assets/crystal.png" class="d-inline-block align-center mr-2 mb-2" alt="">Shayla Stevenson
+    <!--Navigation Brand-->
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top py-0" id="navbar-custom">
+        <span class="navbar-brand h1 mb-0 p-0">
+            <img src="assets/crystal.png" class="img-fluid mx-auto d-block-inline mb-3 mr-2" alt="crystal-icon">Shayla Stevenson
         </span>
 
     <!--Hamburger Icon-->
@@ -22,7 +23,7 @@
         </button>
 
     <!--Navigation Links-->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end py-0" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
@@ -37,6 +38,28 @@
           </div>    
     </nav>
 
+    <!--Footer-->
+    <footer class="container-fluid-sm custom-footer fixed-bottom p-1">
+        <div class="row">
+            <div class="col-4">
+                <a href="https://www.facebook.com/shayla.stevenson.165" target="_blank">
+                    <i class="fab fa-facebook" alt="Facebook Icon"></i>
+                </a>
+            </div>
+
+            <div class="col-4">
+                <a href="https://www.instagram.com/shayla711/" target="_blank">
+                    <i class="fab fa-instagram" alt="Instagram Icon"></i>
+                </a>
+            </div>
+
+            <div class="col-4">
+                <a href="https://github.com/ShaylaStevenson" target="_blank">
+                    <i class="fab fa-github" alt="Github Icon"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
     
     
 
