--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!--Navigation Brand-->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top py-0" id="navbar-custom">
         <span class="navbar-brand h1 mb-0 p-0">
-            <img src="assets/crystal.png" class="img-fluid mx-auto d-block-inline mb-3 mr-2" alt="crystal-icon">Shayla Stevenson
+            <span><img src="assets/crystal.png" class="img-fluid mx-auto d-block-inline mb-2 mr-2" alt="crystal-icon"></span>Shayla Stevenson
         </span>
 
     <!--Hamburger Icon-->
