--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,73 @@
             </div>
         </div>
     </header>
+
+    
+    <main class="container-sm pl-0 pr-0 mt-3">
+        <div class="row">
+        <!--Left Images-->
+            <div class="col-sm-6 portfolio-images p-3">
+                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block mb-2 p-1">
+
+                <div class="row">
+                    <div class="col-sm-6 small-portfolio-images p-3">
+                        <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block mb-2 p-1">
+                        <div class="row">
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 small-portfolio-images p-3">
+                        <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block mb-2 p-1">
+                        <div class="row">
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        <!--Right Images-->
+            <div class="col-sm-6 portfolio-images p-3">
+                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block mb-2 p-1">
+
+                <div class="row">
+                    <div class="col-sm-6 small-portfolio-images p-3">
+                        <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block mb-2 p-1">
+                        <div class="row">
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 small-portfolio-images p-3">
+                        <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block mb-2 p-1">
+                        <div class="row">
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                            <div class="col-sm-6 tiny-portfolio-images p-3">
+                                <img src="assets/color-fern.png" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
         
 
     <!--Footer-->
