deleted alt on icons

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <footer class="container-fluid-sm custom-footer fixed-bottom p-1">
         <div class="row">
             <div class="col-4">
-                <a href="https://www.facebook.com/shayla.stevenson.165" alt="Facebook Icon" target="_blank">
+                <a href="https://www.facebook.com/shayla.stevenson.165" target="_blank">
                     <i class="fab fa-facebook"></i>
                 </a>
             </div>
 
             <div class="col-4">
-                <a href="https://www.instagram.com/shayla711/" alt="Instagram Icon" target="_blank">
+                <a href="https://www.instagram.com/shayla711/" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
 
             <div class="col-4">
-                <a href="https://github.com/ShaylaStevenson" alt="Github Icon" target="_blank">
+                <a href="https://github.com/ShaylaStevenson" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
