added submit button and removed some css comments

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
                         <textarea class="form-control" id="messageInput" rows="6" placeholder="Please provide a brief description of your web service needs. I am here to help!"></textarea>
                         <large class="form-text text-muted">We're off to a great start!</large>
                     </div> 
+                    <button type="submit" class="btn btn-default form-text" id="submit-button">Submit</button>
                 </form>
             </div>
         </div>
