--- a/index.html
+++ b/index.html
@@ -61,20 +61,26 @@
 
         <div class="row no-gutters">
             <div class="col-sm-4">
-                <p>
-                    Lets see
+                <p class="m-1 pb-4 p-1">
+                    I am an aspiring web developer. Currently, I am studying Full Stack Web Development through the University of Washington. 
+                    I have experience in HTML, CSS, Bootstrap 4, and Javascript. The skills that I am acquiring allow me to develop fully functioning,
+                    responsive web applications. I also have experience in refactoring to improve the performance of existing websites. 
                 </p>
             </div>
 
             <div class="col-sm-4">
-                <p>
-                    does this work
+                <p class="m-1 p-1">
+                    My background in business management provides me a unique perspective in web development. I know the frustration that comes from using
+                    a clunky and inaccessible web application. At the heart of my designs is the concept of the user's experience. I want your employees and 
+                    customers to use my sites intuitivly, which is achieved by efficient flow and navigation throughout the applications.
                 </p>
             </div>
 
             <div class="col-sm-4">
-                <p>
-                    fingers crossed
+                <p class="m-1 p-1">
+                    Your website is your organization's home. As such, I want its guests to feel welcome and comfortable. Your website should represent your 
+                    businesses' unique message and style. The first stage in my design process is to get to know your brand in order to create a space that supports
+                    its mission. This is achieved through the use of logical flow, informative content, cohesive color schemes, and attention-grabbing images.
                 </p>
             </div>
         </div>
