--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
                                 <img src="assets/Horiseon-tiny.png" alt="horiseon side content" class="img-thumbnail img-fluid mx-auto d-block p-1">
                             </div>
                             <div class="col-sm-6 p-3">
-                                <img src="assets/Horiseon-tiny-2.png" alt="horiseon people" class="img-thumbnail img-fluid mx-auto d-block p-1">
+                                <img src="assets/horiseon-tiny-2.png" alt="horiseon people" class="img-thumbnail img-fluid mx-auto d-block p-1">
                             </div>
                         </div>
                     </div>
